# Langchain

./: important_commands.txt  pyproject.toml
1. Chat-Models/: Gemini.py
2. Prompts/: Basic Template.py  FewShotPromptTemplate.py
3. OutputParsers/PydanticOutputParser/: pydantic_study_notes.md
4. Data Connections/: 1_Document_Loaders.py  2_Text_Splitters.py  3_Vector_Stores.py  4_Retrievers.py  Simple RAG.py
4. Data Connections/chroma_db_all_docs/58e231d1-7031-490a-896b-074b00c4c51e/: index_metadata.pickle
5. Chains/: langchain_v_1_chains_overview.md
Chat-Models/: Openai.py  Openai_2.py
Data Connections/: 1_Document_Loaders.py  3_Vector_Stores.py  Simple RAG.py
Data Connections/chroma_db/: chroma.sqlite3
OutputParsers/: JsonOutputParser.py  PydanticOutputParser.py
OutputParsers/JsonOutputParser/: JsonOutputParser.py  json_llm_revision.md  json_outputparser_study_notes.md
OutputParsers/PydanticOutputParser/: PydanticOutputParser.py  pydanticoutputparser_study_notes (1).md
Prompts/: Basic Template.py  ChatTemplate.py  Chat_prompt_methods_explained.md  FewShotPromptTemplate.py  more_few_shot_examples.py
