[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain[google-genai,openai]>=1.0.3",
    "langchain-core>=1.0.3",
    "dotenv>=0.9.9",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.3.0",
    "bs4>=0.0.2",
]
